--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -24,3 +24,13 @@ mybatis:
 #  endpoint:
 #      health:
 #        show-details: always
+
+#Eureka客户端
+eureka:
+  client:
+    # 表示是否将自己注册进Eureka Server
+    register-with-eureka: true
+    # 是否从Eureka Server抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+       defaultZone: http://localhost:7001/eureka
